# metis

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: test.yml
metis/: Cargo.toml
metis-src/: Cargo.toml  build.rs
metis-src/src/: lib.rs
metis-sys/: Cargo.toml  bindgen.sh
metis-sys/src/: lib.rs  metis.rs
metis/src/: error.rs  graph.rs  io.rs  lib.rs
metis/src/io/: graph.rs  mod.rs
