[package]
name = "metis-sys"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

[features]
default = ["source"]
source  = ["metis-src"]
system  = []

[dependencies]
num-traits = "0.2.12"
num-derive = "0.3.2"

[dependencies.metis-src]
path = "../metis-src"
optional = true
